feat (PS-53): adding Converter interface, configuration and implementation for the Employee DTO -> Entity mapping. Refactored all DTOs to a single one that provides all the functionalities