@@ -3,11 +3,9 @@ package pointsystem.service;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
-import org.springframework.web.multipart.MultipartFile;
 import org.springframework.web.server.ResponseStatusException;
-import pointsystem.dto.employee.CreateEmployeeDto;
-import pointsystem.dto.employee.EmployeeResponseDto;
-import pointsystem.dto.employee.UpdateEmployeeDto;
+import pointsystem.Converter.EmployeeConverter;
+import pointsystem.dto.employee.EmployeeDto;
 import pointsystem.entity.*;
 import pointsystem.repository.CompanyPositionEmployeeRepository;
 import pointsystem.repository.CompanyRepository;
@@ -17,7 +15,6 @@ import pointsystem.repository.PositionRepository;
 import java.util.Comparator;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
 public class EmployeeService {
@@ -25,69 +22,71 @@ public class EmployeeService {
     private final CompanyRepository companyRepository;
     private final PositionRepository positionRepository;
     private final CompanyPositionEmployeeRepository companyPositionEmployeeRepository;
+    private final EmployeeConverter employeeConverter;
 
     @Autowired
-    public EmployeeService(EmployeeRepository employeeRepository, CompanyRepository companyRepository, PositionRepository positionRepository, CompanyPositionEmployeeRepository companyPositionEmployeeRepository) {
+    public EmployeeService(EmployeeRepository employeeRepository,
+                           CompanyRepository companyRepository,
+                           PositionRepository positionRepository,
+                           CompanyPositionEmployeeRepository companyPositionEmployeeRepository,
+                           EmployeeConverter employeeConverter) {
         this.employeeRepository = employeeRepository;
         this.companyRepository = companyRepository;
         this.positionRepository = positionRepository;
         this.companyPositionEmployeeRepository = companyPositionEmployeeRepository;
+        this.employeeConverter = employeeConverter;
     }
 
-    public int createEmployee(CreateEmployeeDto createEmployeeDto) {
-
-        if (!isValidCPF(createEmployeeDto.cpf())) {
+    public int createEmployee(EmployeeDto employeeDto) {
+        if (!isValidCPF(employeeDto.getCpf())) {
             throw new IllegalArgumentException("CPF inválido.");
         }
 
-        if (employeeRepository.existsByCpf(createEmployeeDto.cpf())) {
+        if (employeeRepository.existsByCpf(employeeDto.getCpf())) {
             throw new IllegalArgumentException("CPF já cadastrado");
         }
 
-        Company company = companyRepository.findById(createEmployeeDto.companyId())
+        Company company = companyRepository.findById(employeeDto.getCompanyId())
                 .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Empresa não encontrada"));
 
-        Position position = positionRepository.findById(createEmployeeDto.positionId())
+        Position position = positionRepository.findById(employeeDto.getPositionId())
                 .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Cargo não encontrado"));
 
-        Employee employee = new Employee(0, createEmployeeDto.name(), createEmployeeDto.cpf(), true, null, createEmployeeDto.photo());
+        employeeDto.setCompany(company);
+        employeeDto.setPosition(position);
+        employeeDto.setStatus(true);
+
+        Employee employee = employeeConverter.toEntity(employeeDto);
         Employee savedEmployee = employeeRepository.save(employee);
 
         CompanyPositionEmployeeId companyPositionEmployeeId = new CompanyPositionEmployeeId(company.getId(), position.getId(), savedEmployee.getId());
-        CompanyPositionEmployee pivotTable = new CompanyPositionEmployee(companyPositionEmployeeId, company, position, savedEmployee, createEmployeeDto.salary());
+        CompanyPositionEmployee pivotTable = new CompanyPositionEmployee(companyPositionEmployeeId, company, position, savedEmployee, employeeDto.getSalary());
 
         companyPositionEmployeeRepository.save(pivotTable);
         return savedEmployee.getId();
     }
 
-
-    public Optional<EmployeeResponseDto> getEmployeeById(int employeeId) {
-        Optional<Employee> employee = employeeRepository.findById(employeeId);
-        Optional<CompanyPositionEmployee> companyPosition = companyPositionEmployeeRepository.findByEmployeeId(employeeId);
-
-        return employee.map(e -> new EmployeeResponseDto(e, companyPosition.orElse(null)));
+    public Optional<EmployeeDto> getEmployeeById(int employeeId) {
+        return employeeRepository.findById(employeeId)
+                .map(employeeConverter::toDto);
     }
 
-    public List<EmployeeResponseDto> getAllEmployees() {
+    public List<EmployeeDto> getAllEmployees() {
         List<Employee> employees = employeeRepository.findAll();
 
-        return employees.stream()
-                .sorted(Comparator.comparing(Employee::getName))
-                .map(employee -> {
-                    Optional<CompanyPositionEmployee> companyPosition = companyPositionEmployeeRepository.findByEmployeeId(employee.getId());
-                    return new EmployeeResponseDto(employee, companyPosition.orElse(null));
-                })
-                .collect(Collectors.toList());
+        return employeeConverter.toDto(
+                employees.stream()
+                        .sorted(Comparator.comparing(Employee::getName))
+                        .toList()
+        );
     }
 
-    public void updateEmployeeById(int employeeId, UpdateEmployeeDto updateEmployeeDto) {
+    public void updateEmployeeById(int employeeId, EmployeeDto employeeDto) {
         Optional<Employee> employeeEntity = employeeRepository.findById(employeeId);
         employeeEntity.ifPresent(employee -> {
-            if (updateEmployeeDto.name() != null) employee.setName(updateEmployeeDto.name());
-            if (updateEmployeeDto.cpf() != null) employee.setCpf(updateEmployeeDto.cpf());
-            if (updateEmployeeDto.status() != null) employee.setStatus(updateEmployeeDto.status());
-            if (updateEmployeeDto.photo() != null) employee.setPhoto(updateEmployeeDto.photo());
-            employeeRepository.save(employee);
+            Employee updatedEmployee = employeeConverter.toEntity(employeeDto);
+            updatedEmployee.setId(employeeId); // Ensure the ID is preserved
+            employeeRepository.save(updatedEmployee);
         });
     }
 
@@ -97,11 +96,7 @@ public class EmployeeService {
         }
     }
 
-
-
     private boolean isValidCPF(String cpf) {
         return cpf != null && cpf.matches("\\d{3}\\.\\d{3}\\.\\d{3}-\\d{2}");
     }
-
-
 }
